--- a/pkgs/sagemath-standard/tox.ini
+++ b/pkgs/sagemath-standard/tox.ini
@@ -120,6 +120,11 @@ passenv =                    {[pkgenv]passenv}
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
                              HOME={envdir}
+    # Stop 'sage -t --installed' from picking up doc installed in SAGE_LOCAL
+                             SAGE_DOC=/doesnotexist
+                             KNOWN_TEST_FAILURES={toxinidir}/known-test-failures.json
+    # See src/bin/sage-env
+                             PYDEVD_DISABLE_FILE_VALIDATION=1
 
 allowlist_externals =
     bash
@@ -134,7 +139,7 @@ commands =
     # We check that the "sage" script invokes the correct Python.
     sage -c 'import sys; print("sys.path =", sys.path); import sage.all; print(sage.all.__file__)'
 
-    sage -t -p --installed
+    sage -t -p --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
