tox.ini (homebrew-{usrlocal,opthomebrew}: First uninstall cmake

--- a/tox.ini
+++ b/tox.ini
@@ -779,6 +779,8 @@ commands =
     #
     # https://docs.brew.sh/Installation
     homebrew:      bash -c 'if [ ! -x {env:HOMEBREW}/bin/brew ]; then git clone --depth 1 https://github.com/Homebrew/brew {env:HOMEBREW}; fi'
+    # work around 'cmake was installed from the local/pinned tap' on GH Actions
+    homebrew-{usrlocal,opthomebrew}: bash -c 'case "{env:SKIP_SYSTEM_PKG_INSTALL:}" in 1|y*|Y*);; *) {env:HOMEBREW}/bin/brew uninstall cmake || : ;; esac'
     homebrew:      bash -c 'case "{env:SKIP_SYSTEM_PKG_INSTALL:}" in 1|y*|Y*);; *) export PATH="build/bin:$PATH" && PACKAGES=$(sage-get-system-packages homebrew $(sage-package list {env:SAGE_PACKAGE_LIST_ARGS}) {env:ALL_EXTRA_SAGE_PACKAGES}); {env:HOMEBREW}/bin/brew install --force --formula $PACKAGES; {env:HOMEBREW}/bin/brew upgrade --formula $PACKAGES;; esac'
     #
     # local-macports
