--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -70,7 +70,7 @@ commands =
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
     !notest:                  && status=0; if ! sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gap --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}; then status=1; fi \
-    !notest:                  && for package in AClib Alnuth AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA Polenta  PrimGrp RadiRoot ResClasses SmallGrp Sophus utils; do if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; done; exit $status'
+    !notest:                  && for package in AClib Alnuth AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA Polenta  PrimGrp RadiRoot ResClasses SmallGrp Sophus utils; do echo "::group::$package"; if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
 
     # broken: AtlasRep
     # takes forever: Polycyclic
