pkgs/sagemath-gap/tox.ini: Test also passagemath-gap[standard]

--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -10,6 +10,7 @@
 envlist =
     sagepython-sagewheels-nopypi-norequirements-notest
     sagepython-sagewheels-nopypi-norequirements
+    sagepython-sagewheels-nopypi-norequirements-standard
 
 requires =
     # Auto-provision a modern tox.
@@ -70,7 +71,9 @@ commands =
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
     !notest:                  && status=0; if ! sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gap --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}; then status=1; fi \
-    !notest:                  && for package in AClib Alnuth AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA Polenta  PrimGrp RadiRoot ResClasses SmallGrp Sophus utils; do echo "::group::$package"; if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
+    !notest:                  && for package in AClib  AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
+    !notest-standard:                           Alnuth Polenta RadiRoot singular \
+    !notest:                         ; do echo "::group::$package"; if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
 
     # broken: AtlasRep
     # takes forever: Polycyclic
