tox.ini, .devcontainer: Remove ubuntu-oracular (defunct)

--- a/tox.ini
+++ b/tox.ini
@@ -910,7 +910,7 @@ setenv =
     # Master list of platforms tested in CI Linux
     #
     DEFAULT_SYSTEM_FACTORS=\
-                     ubuntu-{bionic-toolchain-gcc_9,focal,jammy,noble,oracular,plucky,questing} \
+                     ubuntu-{bionic-toolchain-gcc_9,focal,jammy,noble,plucky,questing} \
                      debian-{bullseye,bookworm,trixie,sid} \
                      linuxmint-{20.2,20.3,21,21.1,21.2,21.3,22} \
                      fedora-{30,31,32,33,34,35,36,37,38,39,40,41,42,43} \
