pkgs/sagemath-gap-pkg-normalizinterface: New

--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -623,6 +623,12 @@ jobs:
         run: |
           ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_gap_pkg_curlinterface
 
+      - name: sagemath-gap-pkg-normalizinterface
+        id:   sagemath-gap-pkg-normalizinterface
+        if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
+        run: |
+          ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_gap_pkg_normalizinterface
+
       - name: sagemath-gap-pkg-semigroups
         id:   sagemath-gap-pkg-semigroups
         if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
