--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -654,6 +654,12 @@ jobs:
         env:
           CIBW_PROJECT_REQUIRES_PYTHON: ${{ github.event_name == 'pull_request' && '>=3.10, <3.11' || '>=3.10, <3.13' }}
 
+      - name: sagemath-gap-pkg-float
+        id:   sagemath-gap-pkg-float
+        if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
+        run: |
+          ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_gap_pkg_float
+
       - name: sagemath-gap-pkg-normalizinterface
         id:   sagemath-gap-pkg-normalizinterface
         if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
