pkgs/sagemath-gap/tox.ini: Fix -standard, add -full

--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -11,6 +11,7 @@ envlist =
     sagepython-sagewheels-nopypi-norequirements-notest
     sagepython-sagewheels-nopypi-norequirements
     sagepython-sagewheels-nopypi-norequirements-standard
+    sagepython-sagewheels-nopypi-norequirements-full
 
 requires =
     # Auto-provision a modern tox.
@@ -48,6 +49,8 @@ deps =
 
 extras =
     !notest:                 test
+    standard:                standard
+    full:                    full
 
 passenv =                    {[pkgenv]passenv}
 
@@ -71,8 +74,9 @@ commands =
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
     !notest:                  && status=0; if ! sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gap --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}; then status=1; fi \
-    !notest:                  && for package in AClib  AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
-    !notest-standard:                           Alnuth Polenta RadiRoot singular \
+    !notest:                  && for package in AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
+    !notest-{standard,full}:                    Alnuth Polenta RadiRoot singular \
+    !notest-full:                               4ti2Interface CaratInterface CddInterface DifSets NormalizInterface NumericalSgps Rcwa Semigroups Sglppow SimpComp SmallSemi Sonata UnitLib YangBaxter \
     !notest:                         ; do echo "::group::$package"; if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
 
     # broken: AtlasRep
