--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -10,8 +10,8 @@
 envlist =
     sagepython-sagewheels-nopypi-norequirements-notest
     sagepython-sagewheels-nopypi-norequirements
-    sagepython-sagewheels-nopypi-norequirements-standard
-    sagepython-sagewheels-nopypi-norequirements-full
+    sagepython-sagewheels-nopypi-norequirements-notest-standard
+    sagepython-sagewheels-nopypi-norequirements-notest-full
 
 requires =
     # Auto-provision a modern tox.
@@ -72,12 +72,14 @@ commands =
     # {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.libs.gap.libgap'
 
 
-    !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                  && status=0; if ! sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gap --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}; then status=1; fi \
-    !notest:                  && for package in AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
-    !notest-{standard,full}:                    Alnuth Polenta RadiRoot singular \
-    !notest-full:                               4ti2Interface CaratInterface CddInterface DifSets NormalizInterface NumericalSgps Rcwa Semigroups Sglppow SimpComp SmallSemi Sonata UnitLib YangBaxter \
-    !notest:                         ; do echo "::group::$package"; if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
+                    bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
+                              && status=0 \
+    !notest:                  && echo "::group:Sage doctests"; if ! sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gap --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}; then status=1; fi; echo "::endgroup::" \
+                              && for package in \
+    !full:                                      AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
+    standard:                                   Alnuth Polenta RadiRoot singular \
+    full:                                       $(for root in $(python -c "from sage.env import GAP_ROOT_PATHS; print(GAP_ROOT_PATHS.replace(\";\", \"\\n\"))"); do (cd $root/pkg && ls); done | sort) \
+    notest,!notest:                  ; do echo "::group::$package"; if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
 
     # broken: AtlasRep
     # takes forever: Polycyclic
