pkgs/sagemath-gap/tox.ini: Use 'gap --nointeract'

--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -79,7 +79,7 @@ commands =
     !full:                                      AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
     standard:                                   Alnuth Polenta RadiRoot singular \
     full:                                       $(for root in $(python -c "from sage.env import GAP_ROOT_PATHS; print(GAP_ROOT_PATHS.replace(\";\", \"\\n\"))"); do (cd $root/pkg && ls); done | sort) \
-    notest,!notest:                  ; do echo "::group::$package"; if ! sage -gap -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
+    notest,!notest:                  ; do echo "::group::$package"; if ! sage -gap --nointeract -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
 
     # broken: AtlasRep
     # takes forever: Polycyclic
