pkgs/sagemath-gap/tox.ini: Skip some package tests that take forever

--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -63,6 +63,11 @@ setenv =                     {[pkgenv]setenv}
     # See src/bin/sage-env
                              PYDEVD_DISABLE_FILE_VALIDATION=1
 
+    # Override full package tests for some GAP packages
+                             TEST_COMMAND=TestPackage
+                             TEST_COMMAND_fplsa=TestPackageAvailability
+                             TEST_COMMAND_polycyclic=TestPackageAvailability
+
 allowlist_externals =
     bash
 
@@ -79,10 +84,9 @@ commands =
     !full:                                      AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
     standard:                                   Alnuth Polenta RadiRoot singular \
     full:                                       $(for root in $(python -c "from sage.env import GAP_ROOT_PATHS; print(GAP_ROOT_PATHS.replace(\";\", \"\\n\"))"); do (cd $root/pkg && ls); done | sort) \
-    notest,!notest:                  ; do echo "::group::$package"; if ! sage -gap --nointeract -c "TestPackage(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
+    notest,!notest:                  ; do echo "::group::$package"; eval TEST=\$\{TEST_COMMAND_$package-\$TEST_COMMAND\}; if ! sage -gap --nointeract -c "$TEST(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
 
     # broken: AtlasRep
-    # takes forever: Polycyclic
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
