--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -83,7 +83,7 @@ commands =
                               && for package in \
     !full:                                      AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
     standard:                                   Alnuth Polenta RadiRoot singular \
-    full:                                       $(for root in $(python -c "from sage.env import GAP_ROOT_PATHS; print(GAP_ROOT_PATHS.replace(\";\", \"\\n\"))"); do (cd $root/pkg && ls); done | sort) \
+    full:                                       $(for root in $(python -c "from sage.env import GAP_ROOT_PATHS; print(GAP_ROOT_PATHS.replace(\";\", \"\\n\"))"); do (cd $root/pkg && ls); done | sort -u) \
     notest,!notest:                  ; do echo "::group::$package"; eval TEST=\$\{TEST_COMMAND_$package-\$TEST_COMMAND\}; if ! sage -gap --nointeract -c "$TEST(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
 
     # broken: AtlasRep
