--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -84,7 +84,7 @@ commands =
     !full:                                      AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
     standard:                                   Alnuth Polenta RadiRoot singular \
     full:                                       $(for root in $(python -c "from sage.env import GAP_ROOT_PATHS; print(GAP_ROOT_PATHS.replace(\";\", \"\\n\"))"); do (cd $root/pkg && ls); done | sort -u) \
-    notest,!notest:                  ; do echo "::group::$package"; eval TEST=\$\{TEST_COMMAND_$package-\$TEST_COMMAND\}; if ! sage -gap --nointeract -c "$TEST(\"$package\");"; then status=1; fi; echo "::endgroup::"; done; exit $status'
+    notest,!notest:                  ; do echo "::group::$package"; eval TEST=\$\{TEST_COMMAND_$package-\$TEST_COMMAND\}; if ! sage -gap --nointeract -c "$TEST(\"$package\");" 2>&1 | tee "{env_log_dir}/$package.log"; then status=1; fi; echo "::endgroup::"; done; if ! grep -q "#I  No errors detected while testing" "{env_log_dir}/$package.log"; then status=1; echo "::error title=Error testing GAP package $package::"$(grep "#I " "{env_log_dir}/$package.log"); fi; exit $status'
 
     # broken: AtlasRep
 
