.github/workflows/dist.yml (wheels): Do not install readline, openssl as system packages

--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -340,7 +340,7 @@ jobs:
             build: macosx
     env:
       # SPKGs to install as system packages
-      SPKGS: _bootstrap _prereq openssl curl readline liblzma libffi bzip2 zlib info libxml2 gdbm libuuid
+      SPKGS: _bootstrap _prereq curl liblzma libffi bzip2 zlib info libxml2 gdbm libuuid
       # Non-Python packages to install as spkgs
       TARGETS_PRE: ccache libpng gmp mpfr mpc mpfi givaro boost_cropped cliquer glpk libhomfly gsl pari xeus_gp gp2c gap_packages gap_pkg_jupyterkernel semigroups ntl flint iml lcalc libbraiding m4ri m4rie planarity rw symmetrica gap cddlib nauty ecm tachyon graphs polytopes_db pip ${{ startsWith(matrix.os, 'ubuntu') && 'patchelf' || '' }}
       CIBW_BUILD: "*${{ matrix.build }}*"
@@ -739,7 +739,7 @@ jobs:
             build: macosx
     env:
       # SPKGs to install as system packages
-      SPKGS: _bootstrap _prereq openssl curl readline liblzma libffi bzip2 zlib info libxml2 gdbm
+      SPKGS: _bootstrap _prereq curl liblzma libffi bzip2 zlib info libxml2 gdbm
       # Non-Python packages to install as spkgs
       TARGETS_PRE: ccache libpng gmp mpfr mpc m4ri m4rie linbox libgd singular ecl maxima brial giac palp eclib sympow bliss gfan fricas coxeter3 mcqd meataxe sirocco tdlib msolve cddlib latte_int 4ti2 cmr topcom qepcad frobby lrslib rubiks plantri buckygen benzene macaulay2 glucose kissat kenzo pip elliptic_curves ${{ startsWith(matrix.os, 'ubuntu') && 'patchelf' || '' }}
       CIBW_BUILD: "*${{ matrix.build }}*"
